tests/NormalTests/paczka1/small_fuzzy/88928059.err
Error in line 5: A725 S994 72,1
Error in line 4: XPQ A725 91,4
Error in line 13: KGNj S||4 100,0
